/* $Id: ChangeLog,v 1.1398 2001-05-07 08:23:24 phaller Exp $ */

 2001-05-07: Patrick Haller <patrick.haller@innotek.de>
    - WS2_32:   o created skeleton
    - WS2HELP:  o created skeleton

 2001-05-04: Dietrich Teickner <Dietrich_Teickner@t-online.de>
    - SHELL32:  o Update for SHFileOperationA (FO_MOVE)

 2001-05-04: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o FrameTrackFrame bugfix for moving child windows

 2000-05-03: Yuri Dario <mc6530@mclink.it>
    - USER32:   o SendNCCalcSize call bugfix (client rectangle parameter)
                o Fix for groupbox WM_SETFONT handler. Must erase top part
                  if font is changed.
    - OLEAUT32: o Fail for TLBMAGIC2 typelib type.
